# opengl_window

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  clang_tidy_lint.sh  compress.sh  cpp_check_lint.sh
src/: main.cpp
src/audio/: audio.cpp  audio.hpp
src/pch/: opengl_demo-pch.hpp
